# calibration_metric

./: .gitignore  README.md  pyproject.toml
calibration_metric/: __init__.py  main.py  metric.py
calibration_metric/utils/: hf_utils.py  reader.py  report.py
calibration_metric/vis/: calibration_plot.py
examples/: benchclamp_tools.py  get_logits.sh  hf_generate.py
examples/data/: dev_medium.jsonl
src/: main.py  metric.py
src/calibration_metric.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: reader.py  warnings.py
src/vis/: calibration_plot.py
tests/: test_dataloader.py  test_metric.py
tests/data/: dev_two.logits
