# pyproject.toml

[build-system]
requires      = ["setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calibration-metric"
version = "1.0.0"
description = "Metrics for measuring model calibration in semantic parsing."
readme = "README.md"
authors = [{ name = "Elias Stengel-Eskin", email = "elias.stengel@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["parsing", "ML", "seq2seq"]
dependencies = [
    "numpy==1.23.3",
    "scipy==1.9.1",
    "pandas==1.5.0",
    "matplotlib==3.6.0",
    "seaborn==0.12.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["src"]

requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "http://placeholder.com"

[project.scripts]
realpython = "reader.__main__:main"

