# pyproject.toml

[build-system]
requires      = ["setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calibration_metric"
version = "0.0.1"
description = "Metrics for measuring model calibration in semantic parsing."
readme = "README.md"
authors = [{ name = "Elias Stengel-Eskin", email = "elias.stengel@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["parsing", "ML", "seq2seq"]
dependencies = [
    "numpy==1.21.6",
    "scipy>=1.6.1",
    "pandas==2.0.0",
    "matplotlib==3.5.3",
    "seaborn==0.12.0",
    "transformers==4.6.0",   
    "pytest==7.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["calibration_metric"]

requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]
examples = ["dill==0.3.4", "datasets==1.1.3", "torch==1.10.0", "cached_property==1.5.2", "sentencepiece==0.1.97", "google",  "protobuf==4.21.9"]

[project.urls]
Homepage = "http://placeholder.com"

[project.scripts]
realpython = "reader.__main__:main"

